Revision history for {{$dist->name}}

{{$NEXT}}
  - Apply patch to expose add_dic via the C interface
    https://github.com/hunspell/hunspell/pull/355
    optionally used by Text::Hunspell::FFI

0.03      2015-12-26 17:07:31 -0700
  - Production release identical to 0.02_03

0.02_03   2015-12-24 11:02:40 -0700
  - Clean up dynamic libraries from old installs

0.02_02   2015-12-23 20:01:41 -0700
  - Better C++ diagnostics
  - Compile test is mandatory (t/compile.t) but
    the link/run stage is not mandatory because
    C++ support in Test::CChecker is flaky, and
    doesn't resemble how Alien::Hunspell is used
    in practice anyway.

0.02_01   2015-12-22 22:53:16 -0700
  - Build on windows

0.02      2015-07-03 10:09:00 -0400
  - Bump required version of Test::CChecker

0.01      2015-07-02 16:49:50 -0400
  - initial version