@@ -2,6 +2,7 @@ use strict;
 use warnings;
 use Test::More;
 use Alien::Hunspell;
+use ExtUtils::CBuilder;
 use Text::ParseWords qw( shellwords );
 use Test::CChecker 0.07;
 #use ExtUtils::CppGuess;
@@ -10,6 +11,8 @@ use Test::CChecker 0.07;
 #  plan skip_all => 'test requires Test::CChecker 0.07 and ExtUtils::CppGuess'
 #    unless eval q{ use Test::CChecker 0.07; use ExtUtils::CppGuess; 1 }
 #}
+
+plan skip_all => 'Test requires compiler' unless ExtUtils::CBuilder->new->have_compiler;
 
 plan tests => 2;
 
